# my-job-applications

./: .env.example  .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  PROJECT_CHECKS.md  PROJECT_PHASE.md  README.md  RETROSPECTIVE_INSIGHTS.md  database.py  dev.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js  run.sh  schemas.py  settings.py  setup.sh
.claude/: CODEMAP.md  settings.json
methodology-improvement/: problem-statement.md  solution-proposal-v4-refined.md
public/: index.html  sample-profile.json
routes/: education.py  job_descriptions.py  jobs.py  languages.py  personal_info.py  photos.py  profile_import.py  projects.py  resumes.py  skills.py  users.py  work_experiences.py
services/: job_descriptions.py  jobs.py  llm.py  pdf_generator.py  pdf_subprocess.py  profile.py  resume_generator.py  translations.py
src/: App.svelte  main.js
templates/: resume_base.css  resume_brussels.html  resume_classic.html  resume_eu_classic.html  resume_modern.html
tests/: conftest.py  test_chronological_order.py  test_claude_provider.py  test_confirm_dialog.py  test_database_migrations.py  test_design_tokens.py  test_education.py  test_gemini_provider.py  test_generator_frame.py  test_job_descriptions.py  test_jobs.py  test_languages.py  test_llm_factory.py  test_llm_language.py  test_llm_service.py  test_pdf_api.py  test_pdf_export.py  test_pdf_language.py  test_personal_info.py  test_photos.py  test_profile_editor_restyle.py  test_profile_import.py  test_projects.py  test_resume_generator.py  test_resume_prompts.py  (+10 more)
(+433 files in other folders)
